<resources>
    <!--  App  -->
    <string name="app_name">Rol Multi Sheet</string>

    <!--  Form Exceptions  -->
    <string name="form_null_blank_exception">No puede estar vacío</string>
    <string name="form_armour_class_exception">Formato inválido</string>
    <string name="form_invalid_range_exception">No puede ser menor a 1</string>

    <!--  Health Modal  -->
    <string name="health_modal_title">Vida</string>
    <string name="health_modal_current">Actual</string>
    <string name="health_modal_max">Máxima</string>
    <string name="health_modal_save">Guardar</string>
    <string name="health_modal_cancel">Cancelar</string>

    <!--  Dice dialog  -->
    <string name="dice_dialog_d2">d2</string>
    <string name="dice_dialog_d3">d3</string>
    <string name="dice_dialog_d4">d4</string>
    <string name="dice_dialog_d6">d6</string>
    <string name="dice_dialog_d8">d8</string>
    <string name="dice_dialog_d10">d10</string>
    <string name="dice_dialog_d12">d12</string>
    <string name="dice_dialog_d20">d20</string>
    <string name="dice_dialog_d100">d100</string>
    <string name="dice_dialog_throw">Lanzar</string>
    <string name="dice_dialog_exit">Volver</string>
    <string name="dice_dialog_reset">Limpiar</string>

    <!--  Home menu  -->
    <string name="home_menu_game">D&amp;D</string>
    <string name="home_menu_game_info">Información</string>

    <!--  Save menu  -->
    <string name="save_menu_item">Guardar</string>

    <!--  Dice menu  -->
    <string name="dice_menu_item">Lanzar dados</string>

    <!--  Snackbar  -->
    <string name="snackbar_action">Deshacer</string>


    <!--  Home -->
    <string name="home_fab_description">Botón flotante para añadir elementos</string>

    <!--  Home item -->
    <string name="home_item_avatar_image_description">Imagen representativa del personaje</string>
    <string name="home_item_actionable_image_description">Icono que muestra que el item es accionable</string>

    <!--  Game host  -->
    <string name="game_host_fab_description">Botón flotante para añadir elementos</string>
    <string name="game_host_toolbar_name">Dungeons and Dragons</string>
    <string name="game_host_race_name">Razas</string>
    <string name="game_host_class_name">Clases</string>
    <string name="game_host_spell_name">Hechizos</string>
    <string name="game_host_item_name">Objetos</string>
    <string name="game_host_armour_name">Armaduras</string>
    <string name="game_host_weapon_name">Armas</string>

    <!--  Race main  -->
    <string name="race_main_snackbar_title">Raza eliminada</string>
    <string name="race_main_delete_error">La raza tiene personajes asociados, no se puede borrar</string>

    <!--  Race edition  -->
    <string name="race_edition_toolbar_title">Nueva raza</string>
    <string name="race_edition_image_description">Imagen representativa de la raza</string>
    <string name="race_edition_name">Nombre</string>
    <string name="race_edition_velocity">Velocidad</string>
    <string name="race_edition_length">Altura media</string>
    <string name="race_edition_age">Edad media</string>

    <!--  Job main  -->
    <string name="job_main_snackbar_title">Clase eliminada</string>
    <string name="job_main_delete_error">La clase tiene personajes asociados, no se puede borrar</string>

    <!--  Job edition  -->
    <string name="job_edition_toolbar_title">Nueva clase</string>
    <string name="job_edition_image_description">Imagen representativa de la clase</string>
    <string name="job_edition_name">Nombre</string>
    <string name="job_edition_velocity">Dados de golpe</string>
    <string name="job_edition_length">Características principales</string>
    <string name="job_edition_age">Tiros de salvación</string>

    <!--  Spell main  -->
    <string name="spell_main_snackbar_title">Hechizo eliminado</string>
    <string name="spell_main_duration">Duración: %1$s</string>
    <string name="spell_main_description">Descripción: %1$s</string>
    <string name="spell_main_castTime">Tiempo de lanzamiento: %1$s</string>
    <string name="spell_main_scope">Alcance: %1$s</string>

    <!--  Spell edition  -->
    <string name="spell_edition_toolbar_title">Nuevo hechizo</string>
    <string name="spell_edition_name">Nombre</string>
    <string name="spell_edition_duration">Duración</string>
    <string name="spell_edition_cast_time">Tiempo de lanzamiento</string>
    <string name="spell_edition_scope">Alcance</string>
    <string name="spell_edition_description">Descripción</string>

    <!--  Item main  -->
    <string name="item_main_snackbar_title">Objeto eliminado</string>

    <!--  Item main Item -->
    <string name="item_main_item_price">%1$s $</string>
    <string name="item_main_item_weight">Peso: %1$s</string>
    <string name="item_main_item_description">Description: %1$s</string>

    <!--  Item edition  -->
    <string name="item_edition_toolbar_title">Nuevo Objeto</string>
    <string name="item_edition_name">Nombre</string>
    <string name="item_edition_price">Precio</string>
    <string name="item_edition_weight">Peso</string>
    <string name="item_edition_description">Descripción</string>

    <!--  Armour main -->
    <string name="armour_main_snackbar_title">Armadura eliminada</string>

    <!--  Armour main item -->
    <string name="armour_main_item_image_class_icon">Icono que representa que la clase de armadura</string>
    <string name="armour_main_item_max_bonus">Bono máximo: %1$s</string>
    <string name="armour_main_item_required_Strength">Fuerza requerida: %1$s</string>
    <string name="armour_main_item_stealth">Desventaja sigilo: %1$s</string>
    <string name="armour_main_item_stealth_yes">sí</string>
    <string name="armour_main_item_stealth_no">no</string>
    <string name="armour_main_item_price">Precio: %1$s</string>
    <string name="armour_main_item_weight">Peso: %1$s</string>
    <string name="armour_main_item_description">Description: %1$s</string>

    <!--  Armour edit-->
    <string name="armour_edition_toolbar_title">Nueva armadura</string>
    <string name="armour_edition_name">Nombre</string>
    <string name="armour_edition_class">Clase de armadura</string>
    <string name="armour_edition_bonus">Bono máximo (0 ilimitado)</string>
    <string name="armour_edition_strength">Fuerza requerida (0 no requiere)</string>
    <string name="armour_edition_stealth">Desventaja en sigilo</string>
    <string name="armour_edition_price">Precio</string>
    <string name="armour_edition_weight">Peso</string>
    <string name="armour_edition_description">Descripción</string>


    <!--  weapon main -->
    <string name="weapon_main_snackbar_title">Arma eliminada</string>

    <!--  Weapon main item -->
    <string name="weapon_main_item_scope">Alcance: %1$s</string>
    <string name="weapon_main_damage_type">Tipo de daño: %1$s</string>
    <string name="weapon_main_two_hand">A dos manos: %1$s</string>
    <string name="weapon_main_yes">Sí</string>
    <string name="weapon_main_no">No</string>
    <string name="weapon_main_price">Precio: %1$s</string>
    <string name="weapon_main_weight">Peso: %1$s</string>
    <string name="weapon_main_description">Description: %1$s</string>

    <!--  Weapon edit  -->
    <string name="weapon_edition_toolbar_title">Nueva arma</string>
    <string name="weapon_edition_name">Nombre</string>
    <string name="weapon_edition_damage">Daño</string>
    <string name="weapon_edition_scope">Alcance</string>
    <string name="weapon_edition_damage_type">Tipo de daño</string>
    <string name="weapon_edition_two_hand">A dos manos</string>
    <string name="weapon_edition_price">Precio</string>
    <string name="weapon_edition_weight">Peso</string>
    <string name="weapon_edition_description">Descripción</string>

    <!--  Creation  -->
    <string name="creation_toolbar_title">Nuevo personaje</string>
    <string name="creation_race_label">Raza</string>
    <string name="creation_job_label">Clase</string>
    <string name="creation_information_label">Información</string>
    <string name="creation_velocity_label">Velocidad de movimiento: %1$d pies</string>
    <string name="creation_hit_dice_label">Dado de golpe: %1$s</string>
    <string name="creation_main_feature_label">Características principales %1$s</string>
    <string name="creation_save_throw_label">Tiros de salvación: %1$s</string>
    <string name="creation_save_throw_dice">Tirada de dados actual: %1$s</string>

    <!--  Character host  -->
    <string name="character_host_information_name">Información</string>

    <!--  Character information  -->
    <string name="character_information_strength">Fuerza</string>
    <string name="character_information_dexterity">Destreza</string>
    <string name="character_information_constitution">Constitución</string>
    <string name="character_information_intelligence">Inteligencia</string>
    <string name="character_information_wisdom">Sabiduría</string>
    <string name="character_information_charisma">Carisma</string>
    <string name="character_information_gold">Oro</string>
    <string name="character_information_bonus">+%1$d</string>
</resources>