<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearArmourEditionRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.armour.edition.ArmourEditionFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarArmourEdition"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollArmourEdition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintArmourWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_x3"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/armour_edition_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_class"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionName"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionName"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionClass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_bonus"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionClass"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionClass"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionClass">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionBonus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_strength"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionBonus"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionBonus"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionBonus">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionStrength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkArmourEditStealth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:checked="false"
                android:gravity="center|start"
                android:layoutDirection="rtl"
                android:text="@string/armour_edition_stealth"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionStrength"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionStrength"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionStrength" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_price"
                app:layout_constraintEnd_toEndOf="@+id/checkArmourEditStealth"
                app:layout_constraintStart_toStartOf="@+id/checkArmourEditStealth"
                app:layout_constraintTop_toBottomOf="@+id/checkArmourEditStealth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_weight"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionPrice"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionPrice"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDecoratorArmourEditionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_x2"
                android:hint="@string/armour_edition_description"
                app:layout_constraintEnd_toEndOf="@+id/inputDecoratorArmourEditionWeight"
                app:layout_constraintStart_toStartOf="@+id/inputDecoratorArmourEditionWeight"
                app:layout_constraintTop_toBottomOf="@+id/inputDecoratorArmourEditionWeight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputArmourEditionDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
